# stream-store

./: Cargo.toml  README.md
benches/: concurrent_multi_stream.rs  pipeline_append.rs
components/client/: Cargo.toml
components/client/src/: lib.rs
components/common/: Cargo.toml
components/common/src/: config.rs  errors.rs  types.rs
components/extent-node/: Cargo.toml
components/extent-node/benches/: extent_append.rs
components/extent-node/src/: downstream.rs  extent.rs  index_stream.rs  lib.rs  store.rs  stream.rs  stream_manager_client.rs  watermark.rs
components/rpc/: Cargo.toml
components/rpc/src/: codec.rs  frame.rs  lib.rs  payload.rs
components/server/: Cargo.toml
components/server/src/: handler.rs  lib.rs
components/stream-manager/: Cargo.toml
components/stream-manager/migrations/: V1__create_stream_table.sql  V2__create_extent_table.sql  V3__create_node_table.sql
components/stream-manager/src/: allocator.rs  heartbeat_checker.rs  lib.rs  metadata.rs  store.rs
docs/: 2026-03-20-object-storage-design.md  design.md  e2e-profiling.md  extent-atomic-analysis.md  extent-concurrency-analysis.md  issues.md
docs/profiling/: index.html
examples/: client-example.rs
tests/: describe_rf2_integration.rs  integration.rs  phase2_integration.rs  phase2b_integration.rs
