[package]
name = "extent-node"
version = "0.1.0"
edition = "2024"

[[bench]]
name = "extent_append"
harness = false

[dependencies]
fastant = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
tokio-util = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
sysinfo = "0.33"
dashmap = "6"
socket2 = "0.5"
common = { path = "../common" }
rpc = { path = "../rpc" }
server = { path = "../server" }
client = { path = "../client" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
